Correct strange scrolling on mobile.

--- a/resources/public/toto-mobile.css
+++ b/resources/public/toto-mobile.css
@@ -27,18 +27,32 @@ body {
     padding: 0px;
 }
 
-div#sidebar {
-    float: both;
-    position: absolute;
+div#overlay {
+    position: fixed;
     left: -270px;
-    width: 270px;
-
     top: 0;
-    bottom: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
+    width: 270px;
+    height: 100%;
+}
 
+/*
+div#overlay div.wrapper {
+    height: 100%;
+
+    background: yellow;
+    width: 270px;
+}
+*/
+
+div#sidebar {
+    width: 270px;
+    float: left;
+    max-height: 100%;
     background: #606070;
+}
+
+div#sidebar:hover {
+    overflow-y: auto;
 }
 
 div#contents {
